# nano-optics-ml

./: .gitignore  LICENSE  README.md  evaluate_saved_models.py  experiment_results.csv  proc.py  pyproject.toml  requirements.txt  setup.py  train_experiment.py
docs/: references.md
notebooks/: caf2_test.ipynb  integration_first_try.ipynb  lsat_epsilon.ipynb  sto_epsilon.ipynb  zhang1994_epsilon.ipynb
notebooks/Chen2021/: main.ipynb  plotting_article_data.ipynb
notebooks/NanoFTIR/: extract_data_v1.ipynb
notebooks/data_extraction_chen_article/: Au_nk.csv  CaF2_eff.csv  CaF2_nk.csv  GaAs_eff.csv  LSAT_eff.csv  NGO_eff.csv  STO_eff.csv  STO_nk.csv  SiO2_eff.csv  SiO2_nk.csv  Si_nk.csv  chen_article_code_and_data_extraction.ipynb
notebooks/initial_testing/: caf2_test.ipynb  chen_article_code.ipynb  dft_test.ipynb  integration_first_try.ipynb  lsat_epsilon.ipynb  sto_epsilon.ipynb  teste.ipynb  zhang1994_epsilon.ipynb
notebooks/pytorch_testing/: speed_tests.ipynb
notebooks/testing_article_data/: analysis_of_models.ipynb  article_main_data.csv  chen_article_code_and_data_extraction.ipynb  main_nn_notebook.ipynb  nn_for_article_data.ipynb  nn_for_article_data_old.ipynb  nn_refactored1.ipynb  nn_second_try.ipynb  nn_second_try_old.ipynb  pulling_data.ipynb  pulling_data_old_way.ipynb  xgboost_test.ipynb
research_and_testing/chen_article_data/: Figure1.py  nearfield.py  scrip_with_fdm_normalized.py  script_with_fdm.py  script_without_nf.py
saved_models/: best_snom_model_v1.pt
src/data_preprocessing/: __init__.py  data_handler.py
tests/: test_permittivity.py
(+24 files in other folders)
